--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@vueuse/core": "^10.3.0",
     "axios": "^1.9.0",
     "element-plus": "^2.3.9",
+    "marked": "^15.0.12",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
