랭체인으로 적용 2차
아직 버그가 좀 많음
속도는 많이 개선됨

--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,8 @@ config.local.py
 
 # 가상환경
 venv/
+backend/venv/   
+*/venv/
 .env
 .env.*
 
@@ -142,3 +144,4 @@ dist/
 
 # 기타
 node_modules/ 
+*/node_modules/
