--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@vueuse/core": "^10.3.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "dompurify": "^3.2.6",
     "element-plus": "^2.3.9",
     "marked": "^15.0.12",
     "pinia": "^2.1.6",
